<b>New in v3.1.3</b>
<ul>
	<li>
		Google sign-in has been fixed!
	</li>
</ul>

<br />
<hr />
<br />

<b>New in v3.1</b>
<ul>
	<li>
		Users can now play the game even when the API is unresponsive
		<ul>
			<li>Only star_rain_ffa works for now, but support for pangolin_tffa_v1 is coming</li>
			<li>Head over to the Settings page and turn on the "API Crash Workaround" option</li>
			<li>This option limits functionality of the client, turn it off if the API is working</li>
		</ul>
	</li>
	<li>Fixed an issue where pressing the Escape key would exit fullscreen</li>
</ul>

<br />
<hr />
<br />

<b>New in v3.0</b>
<ul>
	<li>Improved plugins system</li>
	<li>Better performance</li>
</ul>

<br />
<hr />
<br />

<b>Hello!</b>
<p>Welcome to Blockyfish News, all important messages about the client or game will be posted here in the future.</p>
<p>
	Here's a link to the
	<a
		href="https://blockyfish.vercel.app"
		target="_blank"
		>Blockyfish Client</a
	>
	official website.
</p>