@@ -2,6 +2,6 @@
 	display: inline-block;
 	width: auto;
 	height: 1.25rem;
-	margin-bottom: 4px;
+	margin-bottom: 2px;
 	vertical-align: center;
 }
