@@ -1,8 +1,1 @@
 https://blockyfish.vercel.app/
-https://blockyfish.vercel.app/faq
-https://blockyfish.vercel.app/docs/
-https://blockyfish.vercel.app/docs/tutorial/prerequisites/
-https://blockyfish.vercel.app/docs/tutorial/testing-and-debugging/
-https://blockyfish.vercel.app/docs/tutorial/plugin-structure/
-https://blockyfish.vercel.app/docs/tutorial/writing-code/
-https://blockyfish.vercel.app/docs/tutorial/best-practices/
