@@ -13,81 +13,4 @@
 			1.00
 		</priority>
 	</url>
-	<url>
-		<loc>
-			https://blockyfish.vercel.app/faq
-		</loc>
-		<lastmod>
-			2024-02-05T03:02:24+00:00
-		</lastmod>
-		<priority>
-			0.80
-		</priority>
-	</url>
-	<url>
-		<loc>
-			https://blockyfish.vercel.app/docs/
-		</loc>
-		<lastmod>
-			2024-02-05T03:02:24+00:00
-		</lastmod>
-		<priority>
-			0.80
-		</priority>
-	</url>
-	<url>
-		<loc>
-			https://blockyfish.vercel.app/docs/tutorial/prerequisites/
-		</loc>
-		<lastmod>
-			2024-02-05T03:02:24+00:00
-		</lastmod>
-		<priority>
-			0.64
-		</priority>
-	</url>
-	<url>
-		<loc>
-			https://blockyfish.vercel.app/docs/tutorial/testing-and-debugging/
-		</loc>
-		<lastmod>
-			2024-02-05T03:02:24+00:00
-		</lastmod>
-		<priority>
-			0.51
-		</priority>
-	</url>
-	<url>
-		<loc>
-			https://blockyfish.vercel.app/docs/tutorial/plugin-structure/
-		</loc>
-		<lastmod>
-			2024-02-05T03:02:24+00:00
-		</lastmod>
-		<priority>
-			0.51
-		</priority>
-	</url>
-	<url>
-		<loc>
-			https://blockyfish.vercel.app/docs/tutorial/writing-code/
-		</loc>
-		<lastmod>
-			2024-02-05T03:02:24+00:00
-		</lastmod>
-		<priority>
-			0.41
-		</priority>
-	</url>
-	<url>
-		<loc>
-			https://blockyfish.vercel.app/docs/tutorial/best-practices/
-		</loc>
-		<lastmod>
-			2024-02-05T03:02:24+00:00
-		</lastmod>
-		<priority>
-			0.41
-		</priority>
-	</url>
 </urlset>
