@@ -1,12 +1,36 @@
 div.play-game > div.el-image {
-    background: url(blockfishlogo.png) !important;
-    background-size: contain !important;
-    background-repeat: no-repeat !important;
-    background-position: bottom !important;
+	background: url(blockfishlogo.png) !important;
+	background-size: contain !important;
+	background-repeat: no-repeat !important;
+	background-position: bottom !important;
 }
 div.play-game > div.el-image > img {
-    opacity: 0 !important;
+	opacity: 0 !important;
 }
 button {
-    outline: none !important;
+	outline: none !important;
+}
+
+body > * {
+	opacity: 0;
+	pointer-events: none;
+}
+#window-controls {
+	pointer-events: all;
+	opacity: 1;
+}
+
+html::after {
+	content: "⚠️ Blockyfish has been discontinued. Thank you for supporting the project!";
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 16px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #111827;
+	pointer-events: none;
 }
